# archage

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  example.toml  log  resolve.toml
pacage/: Cargo.toml
pacage/src/: builder.rs  cmd.rs  conf.rs  db.rs  download.rs  lib.rs  patch.rs
pacage/src/format/: db_desc.rs  mod.rs  pkginfo.rs  srcinfo.rs
pacage/src/utils/: copy_dir.rs  file_lock.rs  version.rs
pacage_cli/: Cargo.toml
pacage_cli/src/: build.rs  clean.rs  download.rs  get.rs  main.rs  patch.rs  status.rs  update.rs  util.rs
patchs/glibc/: tests.patch
patchs/systemd/: pacage.patch
patchs/vi/: test.patch
patchs/wayprompt/: pacage.patch
resources/: build_pkg.sh
resources/tests/fake_pkg/: PKGBUILD  some_file1  testing_fake_pkg-2024.04.07-2-any.pkg.tar.zst
resources/tests/fake_pkg1/: .SRCINFO  PKGBUILD  some_file2
resources/tests/fake_pkg2/: .SRCINFO  PKGBUILD
src/: build.rs  builder.rs  cli.rs  cmd.rs  conf.rs  db.rs  download.rs  main.rs  patch.rs  repo.rs
src/cli/: build.rs  download.rs  get.rs  list.rs  mod.rs  patch.rs  status.rs  update.rs
src/format/: db_desc.rs  mod.rs  pkginfo.rs  srcinfo.rs
src/utils/: copy_dir.rs  file_lock.rs  mod.rs  version.rs
test/fake_pkg/: .SRCINFO
