[package]
name = "archage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8"
serde = { version = "1", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }
clap = { version = "4.5.0", features = ["derive"] }
rayon = "1.8"
