[package]
name = "pacage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8"
serde = { version = "1", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }
clap = { version = "4.5.0", features = ["derive"] }
nix = { version = "0.27", features = ["event", "ioctl"] }
thiserror = "1.0"
rayon = "1.8"
log = { version = "0.4", features = ["kv_unstable"] }
env_logger = "0.11"
