[package]
name = "pacage"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8"
serde = { version = "1", features = ["derive"] }
nix = { version = "0.29", features = ["event", "ioctl"] }
thiserror = "1.0"
rayon = "1.8"
log = { version = "0.4", features = ["kv_unstable"] }
flate2 = "1.0"
tar = "0.4"
sha2 = "0.10"
base16ct = { version = "0.2", features = ["alloc"] }

[dev-dependencies]
fake = "2.9.2"
