[package]
name = "pacage_cli"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pacage"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }
clap = { version = "4.5.0", features = ["derive"] }
log = { version = "0.4", features = ["kv_unstable"] }
env_logger = "0.11"
crossbeam-channel = "0.5.13"

[dependencies.pacage]
path = "../pacage"
